fixed icon of second th not showing

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -50,3 +50,6 @@ th:nth-child(6) {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+th:nth-child(2) {
+  margin-left: -2.5rem;
+}
